<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kungshu_hardware_arm</name>
  <version>0.0.0</version>
  <description>kungshu_hardware_arm provides original interface for high frequency control of arm.</description>
  <maintainer email="luoyang@sia.cn">Yang Luo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>kungshu_msgs</depend>
  <depend>example_interfaces</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
